# cherab-stubs

./: .lefthook.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
src/cherab-stubs/core/: __init__.pyi  distribution.pyi  species.pyi
src/cherab-stubs/core/atomic/: __init__.pyi  elements.pyi  gaunt.pyi  interface.pyi  line.pyi  rates.pyi  zeeman.pyi
src/cherab-stubs/core/math/: __init__.pyi  clamp.pyi  mappers.pyi  mask.pyi  samplers.pyi  slice.pyi
src/cherab-stubs/core/math/caching/: __init__.pyi  caching1d.pyi  caching2d.pyi  caching3d.pyi  utility.pyi
src/cherab-stubs/core/math/function/: __init__.pyi
src/cherab-stubs/core/math/integrators/: __init__.pyi  integrators1d.pyi  integrators2d.pyi
src/cherab-stubs/core/math/interpolators/: __init__.pyi  interpolators1d.pyi  interpolators2d.pyi  interpolators3d.pyi
src/cherab-stubs/core/math/transform/: __init__.pyi  cylindrical.pyi  periodic.pyi
src/cherab-stubs/core/plasma/: __init__.pyi  material.pyi  model.pyi  node.pyi
src/cherab-stubs/openadas/rates/: __init__.pyi  atomic.pyi
src/cherab-stubs/tools/primitives/: __init__.pyi  annulus_mesh.pyi  axisymmetric_mesh.pyi  toroidal_mesh.pyi
